--- a/Prototyp/Prototyp.csproj
+++ b/Prototyp/Prototyp.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Discipline.cshtml" />
     <Content Include="Views\StartNumber.cshtml" />
     <Content Include="Views\Login.cshtml" />
+    <Content Include="Views\LoginSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
